clean proposal
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>